--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="principal">
         <section class="presentacion" id="presentacion">
             <div class="presentacion__info">
-                <h1 class="presentacion__titulo"> Soy biotecnodesarrollador </h1>
+                <h1 class="presentacion__titulo"> Soy biotecnodesarrollador 2</h1>
                 <p class="presentacion__parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
                 <div class="presentacion__contenedor_botones">
                     <a href="#sobre-mi" class="boton" role="button"> Sobre mi </a>
